--- a/requirements.txt
+++ b/requirements.txt
@@ -29,10 +29,11 @@ python-dotenv==1.0.0
 structlog==23.2.0
 cryptography==41.0.7
 
-# Development
+# Development & Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-pytest-cov==6.2.1
+pytest-cov==4.1.0
+pytest-mock==3.12.0
 black==23.11.0
 flake8==6.1.0
 mypy==1.7.1
