Update system's AI/ML architecture

--- a/k8s/secret.yaml.template
+++ b/k8s/secret.yaml.template
@@ -5,11 +5,10 @@ metadata:
   namespace: threat-intel
 type: Opaque
 data:
-  # Base64 encoded values - replace with actual values
-  # To generate base64 encoded values:
-  # echo -n "your_actual_password" | base64
-  neo4j-password: <BASE64_ENCODED_NEO4J_PASSWORD>
-  misp-api-key: <BASE64_ENCODED_MISP_API_KEY>
-  otx-api-key: <BASE64_ENCODED_OTX_API_KEY>
-  virustotal-api-key: <BASE64_ENCODED_VIRUSTOTAL_API_KEY>
-  secret-key: <BASE64_ENCODED_SECRET_KEY>
+  # Base64 encoded values - replace with your actual values
+  # Use: echo -n "your_password" | base64
+  neo4j-password: dGhyZWF0X2ludGVsX3Bhc3N3b3Jk  # threat_intel_password
+  misp-api-key: eW91cl9taXNwX2FwaV9rZXk=  # your_misp_api_key
+  otx-api-key: eW91cl9vdHhfYXBpX2tleQ==  # your_otx_api_key
+  virustotal-api-key: eW91cl92aXJ1c3RvdGFsX2FwaV9rZXk=  # your_virustotal_api_key
+  secret-key: eW91cl9zZWNyZXRfa2V5X2hlcmU=  # your_secret_key_here
